--- a/src/com/pos/org/view/createOrganizationView.fxml
+++ b/src/com/pos/org/view/createOrganizationView.fxml
@@ -265,12 +265,28 @@
                                     <Insets top="10.0" />
                                  </padding>
                               </HBox>
+                              <HBox layoutX="20.0" layoutY="186.0" prefHeight="35.0" prefWidth="590.0">
+                                 <children>
+                                    <Label fx:id="orgShopIdLbl" contentDisplay="CENTER" disable="true" prefHeight="28.0" prefWidth="124.0" text="Shop id" visible="false">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="orgShopId" disable="true" prefHeight="25.0" prefWidth="86.0" visible="false" />
+                                 </children>
+                                 <padding>
+                                    <Insets top="10.0" />
+                                 </padding>
+                              </HBox>
                            </children>
                            <padding>
                               <Insets left="10.0" top="10.0" />
                            </padding>
                         </VBox>
-                        <TableView fx:id="shopTable" layoutY="278.0" prefHeight="278.0" prefWidth="1192.0">
+                        <TableView fx:id="shopTable" layoutY="278.0" onMouseClicked="#getTableRowData" prefHeight="278.0" prefWidth="1192.0">
                            <columns>
                               <TableColumn fx:id="shopNameCol" prefWidth="75.0" text="Name" />
                               <TableColumn fx:id="shopLocationCol" prefWidth="75.0" text="Location" />
