--- a/src/com/pos/account/view/EditAttendant.fxml
+++ b/src/com/pos/account/view/EditAttendant.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="index" opacity="0.91" prefHeight="583.0" prefWidth="1080.0" style="-fx-background-color: #e09b0d;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.CreateActProfileCtrl">
+<AnchorPane fx:id="index" opacity="0.91" prefHeight="583.0" prefWidth="1080.0" style="-fx-background-color: #e09b0d;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.EditAttendantCtrl">
    <children>
       <HBox fx:id="header" layoutX="11.0" layoutY="9.0" prefHeight="47.0" prefWidth="478.0" style="-fx-background-color: #020529;">
          <children>
@@ -38,7 +39,7 @@
                </image>
             </ImageView>
          </children></Pane>
-      <Pane fx:id="body" layoutX="502.0" layoutY="161.0" prefHeight="412.0" prefWidth="572.0" style="-fx-background-color: #020529; -fx-background-radius: 7; -fx-border-radius: 6;">
+      <Pane fx:id="actProfileCntHolder" layoutX="502.0" layoutY="161.0" prefHeight="412.0" prefWidth="572.0" style="-fx-background-color: #020529; -fx-background-radius: 7; -fx-border-radius: 6;">
          <children>
             <Pane fx:id="body_items" layoutX="116.0" layoutY="5.0" prefHeight="346.0" prefWidth="450.0" style="-fx-background-color: #020529; -fx-background-radius: 7; -fx-border-radius: 7;">
                <children>
@@ -54,7 +55,7 @@
                               <Font name="Lucida Sans Demibold" size="12.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="fname" editable="false" layoutX="148.0" layoutY="3.0" opacity="0.73" prefHeight="25.0" prefWidth="277.0">
+                        <TextField fx:id="fname" layoutX="148.0" layoutY="3.0" prefHeight="25.0" prefWidth="277.0">
                            <font>
                               <Font name="Lucida Sans Demibold" size="14.0" />
                            </font>
@@ -68,7 +69,7 @@
                               <Font name="Lucida Sans Demibold" size="12.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="lname" editable="false" layoutX="149.0" layoutY="2.0" opacity="0.73" prefHeight="25.0" prefWidth="277.0">
+                        <TextField fx:id="lname" layoutX="149.0" layoutY="2.0" prefHeight="25.0" prefWidth="277.0">
                            <font>
                               <Font name="Lucida Sans Demibold" size="14.0" />
                            </font>
@@ -82,7 +83,7 @@
                               <Font name="Lucida Sans Demibold" size="12.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="mname" editable="false" layoutX="149.0" layoutY="2.0" opacity="0.73" prefHeight="25.0" prefWidth="277.0">
+                        <TextField fx:id="mname" layoutX="149.0" layoutY="2.0" prefHeight="25.0" prefWidth="277.0">
                            <font>
                               <Font name="Lucida Sans Demibold" size="14.0" />
                            </font>
@@ -96,7 +97,7 @@
                               <Font name="Lucida Sans Demibold" size="12.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="addr" editable="false" layoutX="148.0" layoutY="2.0" opacity="0.73" prefHeight="25.0" prefWidth="277.0">
+                        <TextField fx:id="addr" layoutX="148.0" layoutY="2.0" prefHeight="25.0" prefWidth="277.0">
                            <font>
                               <Font name="Lucida Sans Demibold" size="14.0" />
                            </font>
@@ -110,7 +111,7 @@
                               <Font name="Lucida Sans Demibold" size="12.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="gender" editable="false" layoutX="147.0" layoutY="2.0" opacity="0.73" prefHeight="25.0" prefWidth="277.0">
+                        <TextField fx:id="gender" layoutX="147.0" layoutY="2.0" prefHeight="25.0" prefWidth="277.0">
                            <font>
                               <Font name="Lucida Sans Demibold" size="14.0" />
                            </font>
@@ -124,7 +125,7 @@
                               <Font name="Lucida Sans Demibold" size="12.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="dob" editable="false" layoutX="147.0" layoutY="2.0" opacity="0.73" prefHeight="25.0" prefWidth="277.0">
+                        <TextField fx:id="dob" layoutX="147.0" layoutY="2.0" prefHeight="25.0" prefWidth="277.0">
                            <font>
                               <Font name="Lucida Sans Demibold" size="14.0" />
                            </font>
@@ -138,7 +139,7 @@
                               <Font name="Lucida Sans Demibold" size="12.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="mobile" editable="false" layoutX="146.0" layoutY="2.0" opacity="0.73" prefHeight="25.0" prefWidth="277.0">
+                        <TextField fx:id="mobile" layoutX="146.0" layoutY="2.0" prefHeight="25.0" prefWidth="277.0">
                            <font>
                               <Font name="Lucida Sans Demibold" size="14.0" />
                            </font>
@@ -152,13 +153,18 @@
                               <Font name="Lucida Sans Demibold" size="12.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="doe" editable="false" layoutX="146.0" layoutY="3.0" opacity="0.73" prefHeight="25.0" prefWidth="277.0">
+                        <TextField fx:id="doe" layoutX="146.0" layoutY="3.0" prefHeight="25.0" prefWidth="277.0">
                            <font>
                               <Font name="Lucida Sans Demibold" size="14.0" />
                            </font>
                         </TextField>
                      </children>
                   </Pane>
+                  <Button fx:id="save_change_btn" layoutX="310.0" layoutY="20.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="105.0" style="-fx-background-color: #e09b0d;" text="Save Changes" textFill="#020529" visible="false">
+                     <font>
+                        <Font name="Lucida Sans Demibold" size="12.0" />
+                     </font>
+                  </Button>
                </children>
             </Pane>
             <Pane layoutX="128.0" layoutY="341.0" prefHeight="33.0" prefWidth="430.0" style="-fx-background-color: #020521; -fx-background-radius: 5;">
@@ -168,7 +174,7 @@
                         <Font name="Lucida Sans Demibold" size="12.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="email" editable="false" layoutX="146.0" layoutY="3.0" opacity="0.73" prefHeight="25.0" prefWidth="277.0">
+                  <TextField fx:id="email" layoutX="146.0" layoutY="3.0" prefHeight="25.0" prefWidth="277.0">
                      <font>
                         <Font name="Lucida Sans Demibold" size="14.0" />
                      </font>
@@ -182,7 +188,7 @@
                         <Font name="Lucida Sans Demibold" size="12.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="position" editable="false" layoutX="146.0" layoutY="3.0" opacity="0.73" prefHeight="25.0" prefWidth="277.0">
+                  <TextField fx:id="position" layoutX="146.0" layoutY="3.0" prefHeight="25.0" prefWidth="277.0">
                      <font>
                         <Font name="Lucida Sans Demibold" size="14.0" />
                      </font>
@@ -194,8 +200,8 @@
       <TableView fx:id="attendant_table" layoutX="11.0" layoutY="61.0" onMouseClicked="#getAttendantInfo" prefHeight="514.0" prefWidth="478.0">
         <columns>
           <TableColumn fx:id="column_lName" prefWidth="93.0" text="Last Name" />
-          <TableColumn fx:id="column_fName" prefWidth="100.0" text="First Name" />
-            <TableColumn fx:id="column_mName" prefWidth="63.0" text="mN" />
+          <TableColumn fx:id="column_fName" prefWidth="100.0" text="First Name" visible="false" />
+            <TableColumn fx:id="column_mName" prefWidth="63.0" text="mN" visible="false" />
             <TableColumn fx:id="column_address" prefWidth="19.0" text="aD" visible="false" />
             <TableColumn fx:id="column_mobile" minWidth="9.0" prefWidth="10.0" text="ph" visible="false" />
             <TableColumn fx:id="column_email" prefWidth="33.0" text="em" visible="false" />
