--- a/src/com/pos/account/view/createAttendant.fxml
+++ b/src/com/pos/account/view/createAttendant.fxml
@@ -7,135 +7,161 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="520.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.CreateAttendantCtrl">
+<AnchorPane prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.CreateAttendantCtrl">
    <children>
-      <TitledPane alignment="TOP_LEFT" animated="false" collapsible="false" prefHeight="520.0" prefWidth="500.0" text="Attendant Registration">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="499.0" prefWidth="498.0" style="-fx-background-color: #020529;">
-               <children>
-                  <TextField fx:id="fname" layoutX="8.0" layoutY="40.0" prefHeight="37.0" prefWidth="207.0">
-                     <font>
-                        <Font name="Microsoft Tai Le Bold" size="13.0" />
-                     </font></TextField>
-                  <Label layoutX="84.0" layoutY="21.0" text="First Name" textFill="WHITE">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="sname" layoutX="277.0" layoutY="39.0" prefHeight="37.0" prefWidth="207.0">
-                     <font>
-                        <Font name="Microsoft Tai Le Bold" size="13.0" />
-                     </font></TextField>
-                  <Label layoutX="327.0" layoutY="20.0" text="Surname Name" textFill="WHITE">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="mname" layoutX="8.0" layoutY="106.0" prefHeight="37.0" prefWidth="207.0">
-                     <font>
-                        <Font name="Microsoft Tai Le Bold" size="13.0" />
-                     </font></TextField>
-                  <Label layoutX="72.0" layoutY="86.0" text="Other Name" textFill="WHITE">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="gender" layoutX="140.0" layoutY="173.0" prefHeight="27.0" prefWidth="111.0" visibleRowCount="2" />
-                  <Label layoutX="173.0" layoutY="154.0" text="Gender" textFill="WHITE">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="407.0" layoutY="156.0" text="Date of Birth" textFill="WHITE" />
-                  <DatePicker fx:id="dob" layoutX="396.0" layoutY="173.0" prefHeight="27.0" prefWidth="89.0" />
-                  <TextArea fx:id="addr" layoutX="6.0" layoutY="236.0" prefHeight="37.0" prefWidth="207.0">
-                     <font>
-                        <Font name="Microsoft Tai Le Bold" size="13.0" />
-                     </font></TextArea>
-                  <Label layoutX="86.0" layoutY="218.0" prefHeight="21.0" prefWidth="68.0" text="Address" textFill="WHITE">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="345.0" layoutY="86.0" prefHeight="17.0" prefWidth="71.0" text="Mobile No" textFill="WHITE">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="phoneNo" layoutX="280.0" layoutY="107.0" prefHeight="37.0" prefWidth="207.0">
-                     <font>
-                        <Font name="Microsoft Tai Le Bold" size="13.0" />
-                     </font></TextField>
-                  <Label layoutX="346.0" layoutY="218.0" prefHeight="17.0" prefWidth="71.0" text="Email" textFill="WHITE">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="email" layoutX="274.0" layoutY="236.0" prefHeight="45.0" prefWidth="214.0">
-                     <font>
-                        <Font name="Microsoft Tai Le Bold" size="13.0" />
-                     </font></TextField>
-                  <Label layoutX="57.0" layoutY="154.0" prefHeight="17.0" prefWidth="71.0" text="Position" textFill="WHITE">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="pos" layoutX="7.0" layoutY="173.0" prefHeight="27.0" prefWidth="127.0" />
-                  <Label layoutX="278.0" layoutY="154.0" text="Date Employed" textFill="WHITE">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Label>
-                  <DatePicker fx:id="doe" layoutX="277.0" layoutY="173.0" prefHeight="27.0" prefWidth="89.0" />
-                  <Button fx:id="registerBtn" layoutX="125.0" layoutY="427.0" mnemonicParsing="false" onAction="#registerAttendant" prefHeight="38.0" prefWidth="103.0" text="Register">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="cancelBtn" layoutX="246.0" layoutY="427.0" mnemonicParsing="false" onAction="#cancelRegistration" prefHeight="38.0" prefWidth="100.0" text="Cancel">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Button>
-                  <TextField fx:id="uName" layoutX="6.0" layoutY="316.0" prefHeight="37.0" prefWidth="207.0">
-                     <font>
-                        <Font name="Microsoft Tai Le Bold" size="13.0" />
-                     </font>
-                  </TextField>
-                  <TextField fx:id="password" layoutX="282.0" layoutY="311.0" prefHeight="37.0" prefWidth="207.0">
-                     <font>
-                        <Font name="Microsoft Tai Le Bold" size="13.0" />
-                     </font>
-                  </TextField>
-                  <Label layoutX="73.0" layoutY="294.0" text="User Name" textFill="WHITE">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="356.0" layoutY="292.0" text="Password" textFill="WHITE">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="Repeat_password" layoutX="281.0" layoutY="367.0" prefHeight="37.0" prefWidth="207.0">
-                     <font>
-                        <Font name="Microsoft Tai Le Bold" size="13.0" />
-                     </font>
-                  </TextField>
-                  <Label layoutX="322.0" layoutY="348.0" text="Re-peat Password" textFill="WHITE">
-                     <font>
-                        <Font name="Lucida Sans Unicode" size="12.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
-        </content>
+      <TitledPane alignment="TOP_LEFT" animated="false" collapsible="false" disable="true" layoutX="202.0" layoutY="23.0" prefHeight="27.0" prefWidth="689.0" style="-fx-background-color: #e09b0d;" text="Attendant Registration" textFill="#020529">
          <font>
             <Font name="Lucida Sans Unicode" size="14.0" />
          </font>
       </TitledPane>
+      <Pane fx:id="confirmation" layoutX="258.0" layoutY="81.0" prefHeight="512.0" prefWidth="572.0" style="-fx-background-color: #fff;">
+         <children>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="106.0" layoutY="381.0" prefHeight="52.0" prefWidth="339.0" text="Sucessful !" textFill="#3dc3e4">
+               <font>
+                  <Font name="Arial Bold Italic" size="37.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="287.0" fitWidth="281.0" layoutX="132.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../Assets/images/sucess.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="410.0" layoutY="480.0" prefHeight="26.0" prefWidth="149.0" text="please login to continue" textFill="#020529">
+               <font>
+                  <Font name="Georgia Bold Italic" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+    <AnchorPane fx:id="attendant_regHolder" layoutX="202.0" layoutY="56.0" minHeight="0.0" minWidth="0.0" prefHeight="571.0" prefWidth="689.0" style="-fx-background-color: #020529;">
+         <children>
+            <TextField fx:id="fname" layoutX="120.0" layoutY="83.0" prefHeight="37.0" prefWidth="207.0">
+               <font>
+                  <Font name="Microsoft Tai Le Bold" size="13.0" />
+               </font>
+            </TextField>
+            <Label layoutX="196.0" layoutY="64.0" text="First Name" textFill="WHITE">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="sname" layoutX="389.0" layoutY="82.0" prefHeight="37.0" prefWidth="207.0">
+               <font>
+                  <Font name="Microsoft Tai Le Bold" size="13.0" />
+               </font>
+            </TextField>
+            <Label layoutX="439.0" layoutY="63.0" text="Surname Name" textFill="WHITE">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="mname" layoutX="120.0" layoutY="149.0" prefHeight="37.0" prefWidth="207.0">
+               <font>
+                  <Font name="Microsoft Tai Le Bold" size="13.0" />
+               </font>
+            </TextField>
+            <Label layoutX="184.0" layoutY="129.0" text="Other Name" textFill="WHITE">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="gender" layoutX="252.0" layoutY="216.0" prefHeight="27.0" prefWidth="111.0" visibleRowCount="2" />
+            <Label layoutX="285.0" layoutY="197.0" text="Gender" textFill="WHITE">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="519.0" layoutY="199.0" text="Date of Birth" textFill="WHITE" />
+            <DatePicker fx:id="dob" layoutX="508.0" layoutY="216.0" prefHeight="27.0" prefWidth="89.0" />
+            <TextArea fx:id="addr" layoutX="118.0" layoutY="279.0" prefHeight="37.0" prefWidth="207.0">
+               <font>
+                  <Font name="Microsoft Tai Le Bold" size="13.0" />
+               </font>
+            </TextArea>
+            <Label layoutX="198.0" layoutY="261.0" prefHeight="21.0" prefWidth="68.0" text="Address" textFill="WHITE">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="457.0" layoutY="129.0" prefHeight="17.0" prefWidth="71.0" text="Mobile No" textFill="WHITE">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="phoneNo" layoutX="392.0" layoutY="150.0" prefHeight="37.0" prefWidth="207.0">
+               <font>
+                  <Font name="Microsoft Tai Le Bold" size="13.0" />
+               </font>
+            </TextField>
+            <Label layoutX="458.0" layoutY="261.0" prefHeight="17.0" prefWidth="71.0" text="Email" textFill="WHITE">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="email" layoutX="386.0" layoutY="279.0" prefHeight="45.0" prefWidth="214.0">
+               <font>
+                  <Font name="Microsoft Tai Le Bold" size="13.0" />
+               </font>
+            </TextField>
+            <Label layoutX="169.0" layoutY="197.0" prefHeight="17.0" prefWidth="71.0" text="Position" textFill="WHITE">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="pos" layoutX="119.0" layoutY="216.0" prefHeight="27.0" prefWidth="127.0" />
+            <Label layoutX="390.0" layoutY="197.0" text="Date Employed" textFill="WHITE">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Label>
+            <DatePicker fx:id="doe" layoutX="389.0" layoutY="216.0" prefHeight="27.0" prefWidth="89.0" />
+            <Button fx:id="registerBtn" layoutX="237.0" layoutY="494.0" mnemonicParsing="false" onAction="#registerAttendant" prefHeight="38.0" prefWidth="103.0" text="Register">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="cancelBtn" layoutX="358.0" layoutY="494.0" mnemonicParsing="false" onAction="#cancelRegistration" prefHeight="38.0" prefWidth="100.0" text="Cancel">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Button>
+            <TextField fx:id="uName" layoutX="118.0" layoutY="359.0" prefHeight="37.0" prefWidth="207.0">
+               <font>
+                  <Font name="Microsoft Tai Le Bold" size="13.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="password" layoutX="394.0" layoutY="354.0" prefHeight="37.0" prefWidth="207.0">
+               <font>
+                  <Font name="Microsoft Tai Le Bold" size="13.0" />
+               </font>
+            </TextField>
+            <Label layoutX="185.0" layoutY="337.0" text="User Name" textFill="WHITE">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="468.0" layoutY="335.0" text="Password" textFill="WHITE">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="Repeat_password" layoutX="393.0" layoutY="410.0" prefHeight="37.0" prefWidth="207.0">
+               <font>
+                  <Font name="Microsoft Tai Le Bold" size="13.0" />
+               </font>
+            </TextField>
+            <Label layoutX="434.0" layoutY="391.0" text="Re-peat Password" textFill="WHITE">
+               <font>
+                  <Font name="Lucida Sans Unicode" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
