--- a/src/com/pos/inventory/view/updateInventoryView.fxml
+++ b/src/com/pos/inventory/view/updateInventoryView.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.inventory.controller.InventoryCtrl">
+<AnchorPane prefHeight="658.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.inventory.controller.InventoryCtrl">
    <children>
       <TabPane layoutX="8.0" layoutY="9.0" prefHeight="586.0" prefWidth="1192.0" tabClosingPolicy="UNAVAILABLE">
          <tabs>
@@ -24,9 +24,9 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="331.0" prefWidth="600.0">
                      <children>
-                        <VBox layoutY="-1.0" prefHeight="372.0" prefWidth="1192.0">
+                        <VBox layoutY="-1.0" prefHeight="192.0" prefWidth="1192.0">
                            <children>
-                              <HBox>
+                              <HBox prefHeight="28.0" prefWidth="1124.0">
                                  <children>
                                     <Label prefHeight="28.0" prefWidth="220.0" text="PRODUCT CATEGORY  DETAILS">
                                        <font>
@@ -92,6 +92,22 @@
                               </HBox>
                               <HBox layoutX="20.0" layoutY="186.0" prefHeight="35.0" prefWidth="590.0">
                                  <children>
+                                    <HBox prefHeight="35.0" prefWidth="590.0">
+                                       <children>
+                                          <Label contentDisplay="CENTER" disable="true" prefHeight="25.0" prefWidth="149.0" text="Category id:" visible="false">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                             <HBox.margin>
+                                                <Insets right="10.0" />
+                                             </HBox.margin>
+                                          </Label>
+                                          <TextField fx:id="productCategoryId" editable="false" prefHeight="25.0" prefWidth="61.0" visible="false" />
+                                       </children>
+                                       <padding>
+                                          <Insets top="10.0" />
+                                       </padding>
+                                    </HBox>
                                     <TextField fx:id="productCategoryId" disable="true" prefHeight="25.0" prefWidth="86.0" visible="false" />
                                  </children>
                                  <padding>
@@ -103,10 +119,10 @@
                               <Insets left="10.0" top="10.0" />
                            </padding>
                         </VBox>
-                        <TableView fx:id="productCategoryTable" layoutY="278.0" onMouseClicked="#getTableRowData" prefHeight="278.0" prefWidth="1192.0">
+                        <TableView fx:id="productCategoryTable" layoutX="14.0" layoutY="217.0" onMouseClicked="#getProductCategoryTableRowData" prefHeight="164.0" prefWidth="538.0">
                            <columns>
                               <TableColumn fx:id="productCategoryNameCol" prefWidth="197.0" text="Category Name" />
-                              <TableColumn fx:id="productCategoryDescCol" prefWidth="463.0000305175781" text="Description" />
+                              <TableColumn fx:id="productCategoryDescCol" prefWidth="340.0" text="Description" />
                            </columns>
                         </TableView>
                      </children>
@@ -193,7 +209,7 @@
                                           <Insets right="10.0" />
                                        </HBox.margin>
                                     </Label>
-                                    <ComboBox fx:id="productCategory" prefHeight="25.0" prefWidth="157.0" />
+                                    <ComboBox fx:id="productCategoryCB" prefHeight="25.0" prefWidth="157.0" />
                                  </children>
                                  <padding>
                                     <Insets top="10.0" />
@@ -263,18 +279,50 @@
                                     <Insets top="10.0" />
                                  </padding>
                               </HBox>
+                              <HBox layoutX="20.0" layoutY="231.0" prefHeight="35.0" prefWidth="523.0">
+                                 <children>
+                                    <HBox prefHeight="35.0" prefWidth="590.0">
+                                       <children>
+                                          <Label contentDisplay="CENTER" prefHeight="25.0" prefWidth="134.0" text="id" visible="false">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                             <HBox.margin>
+                                                <Insets right="10.0" />
+                                             </HBox.margin>
+                                          </Label>
+                                          <TextField fx:id="productId" prefHeight="25.0" prefWidth="80.0" visible="false" />
+                                       </children>
+                                       <padding>
+                                          <Insets top="10.0" />
+                                       </padding>
+                                    </HBox>
+                                    <Label fx:id="orgShopIdLbl111" contentDisplay="CENTER" disable="true" prefHeight="28.0" prefWidth="124.0" text="Shop id" visible="false">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="orgShopId111" disable="true" prefHeight="25.0" prefWidth="86.0" visible="false" />
+                                 </children>
+                                 <padding>
+                                    <Insets top="10.0" />
+                                 </padding>
+                              </HBox>
                            </children>
                            <padding>
                               <Insets left="10.0" top="10.0" />
                            </padding>
                         </VBox>
-                        <TableView fx:id="productTable" layoutY="346.0" onMouseClicked="#getTableRowData" prefHeight="210.0" prefWidth="1192.0">
+                        <TableView fx:id="productTable" layoutY="346.0" onMouseClicked="#getProductTableRowData" prefHeight="210.0" prefWidth="921.0">
                            <columns>
-                              <TableColumn fx:id="productNameCol" prefWidth="109.0" text="Product Name" />
-                              <TableColumn fx:id="productDecCol" minWidth="0.0" prefWidth="299.0" text="Description" />
-                              <TableColumn fx:id="productCategoryCol" prefWidth="174.0" text="Category" />
-                              <TableColumn fx:id="productCostCol" prefWidth="87.0" text="Cost" />
-                              <TableColumn fx:id="productPriceCol" prefWidth="68.0" text="Price" />
+                              <TableColumn fx:id="productNameCol" prefWidth="194.33333587646484" text="Product Name" />
+                              <TableColumn fx:id="productDecCol" minWidth="0.0" prefWidth="291.33331298828125" text="Description" />
+                              <TableColumn fx:id="productCategoryCol" prefWidth="176.66668701171875" text="Category" />
+                              <TableColumn fx:id="productCostCol" prefWidth="134.3333740234375" text="Cost" />
+                              <TableColumn fx:id="productPriceCol" prefWidth="125.0" text="Price" />
                            </columns>
                         </TableView>
                      </children>
@@ -283,9 +331,9 @@
             </Tab>
             <Tab fx:id="inventoryTab" text="Inventory">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="371.0" prefWidth="729.0">
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="592.0" prefWidth="1192.0">
                      <children>
-                        <VBox layoutY="-1.0" prefHeight="556.0" prefWidth="1194.0">
+                        <VBox layoutY="-1.0" prefHeight="343.0" prefWidth="1194.0">
                            <children>
                               <HBox>
                                  <children>
@@ -329,7 +377,7 @@
                                           <Insets right="10.0" />
                                        </HBox.margin>
                                     </Label>
-                                    <ComboBox fx:id="inventoryItem" prefWidth="150.0" />
+                                    <ComboBox fx:id="inventoryItemCB" prefWidth="150.0" />
                                  </children>
                                  <padding>
                                     <Insets top="10.0" />
@@ -447,11 +495,38 @@
                                     <Insets top="10.0" />
                                  </padding>
                               </HBox>
+                              <HBox layoutX="20.0" layoutY="236.0" prefHeight="35.0" prefWidth="590.0">
+                                 <children>
+                                    <Label contentDisplay="CENTER" prefHeight="25.0" prefWidth="177.0" text="id" visible="false">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="inventoryItemIdCol" prefHeight="25.0" prefWidth="97.0" visible="false" />
+                                 </children>
+                                 <padding>
+                                    <Insets top="10.0" />
+                                 </padding>
+                              </HBox>
                            </children>
                            <padding>
                               <Insets left="10.0" top="10.0" />
                            </padding>
                         </VBox>
+                        <TableView fx:id="productInventoryTable" layoutY="391.0" onMouseClicked="#getProductInventoryTableRowData" prefHeight="215.0" prefWidth="1192.0">
+                          <columns>
+                            <TableColumn fx:id="inventoryItemCol" prefWidth="208.0" text="Inventory Item" />
+                            <TableColumn fx:id="inventoryItemDescCol" prefWidth="326.0" text="Description" />
+                              <TableColumn fx:id="inventoryItemNoOfUnitsCol" prefWidth="133.0" text="No. of Units" />
+                              <TableColumn fx:id="inventoryItemQtyPerUnitCol" prefWidth="118.0" text="Quantity per Unit" />
+                              <TableColumn fx:id="inventoryItemTotalNoOfItemsCol" prefWidth="125.0" text="Total No. of Items" />
+                              <TableColumn fx:id="inventoryItemOrderedItemsCol" prefWidth="157.0" text="Total No. Ordered Items" />
+                              <TableColumn fx:id="inventoryItemOrderLvl" prefWidth="124.0" text="Order level" />
+                          </columns>
+                        </TableView>
                      </children>
                   </AnchorPane>
                </content>
