--- a/src/com/pos/account/view/ViewAttdList.fxml
+++ b/src/com/pos/account/view/ViewAttdList.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="index" opacity="0.91" prefHeight="583.0" prefWidth="1080.0" style="-fx-background-color: #e09b0d;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.CreateActProfileCtrl">
+<AnchorPane fx:id="index" opacity="0.91" prefHeight="583.0" prefWidth="1080.0" style="-fx-background-color: #e09b0d;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.ViewAttdListCtrl">
    <children>
       <HBox fx:id="header" layoutX="11.0" layoutY="9.0" prefHeight="47.0" prefWidth="1055.0" style="-fx-background-color: #020529;">
          <children>
@@ -18,7 +18,7 @@
             </Label>
          </children>
       </HBox>
-      <TableView fx:id="attendant_table" layoutX="11.0" layoutY="61.0" onMouseClicked="" prefHeight="514.0" prefWidth="1055.0">
+      <TableView fx:id="attendant_table" layoutX="11.0" layoutY="61.0" prefHeight="514.0" prefWidth="1055.0">
         <columns>
           <TableColumn fx:id="column_lName" prefWidth="98.0" text="Last Name" />
           <TableColumn fx:id="column_fName" prefWidth="101.0" text="First Name" />
