--- a/src/com/pos/account/view/createAttendant.fxml
+++ b/src/com/pos/account/view/createAttendant.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.CreateAttendantCtrl">
+<AnchorPane prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.CreateAttendantCtrl">
    <children>
       <TitledPane alignment="TOP_LEFT" animated="false" collapsible="false" disable="true" layoutX="202.0" layoutY="23.0" prefHeight="27.0" prefWidth="689.0" style="-fx-background-color: #e09b0d;" text="Attendant Registration" textFill="#020529">
          <font>
@@ -39,128 +39,139 @@
             </Label>
          </children>
       </Pane>
-    <AnchorPane fx:id="attendant_regHolder" layoutX="202.0" layoutY="56.0" minHeight="0.0" minWidth="0.0" prefHeight="571.0" prefWidth="689.0" style="-fx-background-color: #020529;">
+    <AnchorPane fx:id="attendant_regHolder" layoutX="202.0" layoutY="56.0" minHeight="0.0" minWidth="0.0" prefHeight="549.0" prefWidth="689.0" style="-fx-background-color: #020529;">
          <children>
-            <TextField fx:id="fname" layoutX="120.0" layoutY="83.0" prefHeight="37.0" prefWidth="207.0">
+            <TextField fx:id="fname" layoutX="40.0" layoutY="50.0" prefHeight="37.0" prefWidth="207.0">
                <font>
                   <Font name="Microsoft Tai Le Bold" size="13.0" />
                </font>
             </TextField>
-            <Label layoutX="196.0" layoutY="64.0" text="First Name" textFill="WHITE">
+            <Label layoutX="116.0" layoutY="31.0" text="First Name" textFill="WHITE">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Label>
-            <TextField fx:id="sname" layoutX="389.0" layoutY="82.0" prefHeight="37.0" prefWidth="207.0">
+            <TextField fx:id="sname" layoutX="309.0" layoutY="49.0" prefHeight="37.0" prefWidth="207.0">
                <font>
                   <Font name="Microsoft Tai Le Bold" size="13.0" />
                </font>
             </TextField>
-            <Label layoutX="439.0" layoutY="63.0" text="Surname Name" textFill="WHITE">
+            <Label layoutX="359.0" layoutY="30.0" text="Surname Name" textFill="WHITE">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Label>
-            <TextField fx:id="mname" layoutX="120.0" layoutY="149.0" prefHeight="37.0" prefWidth="207.0">
+            <TextField fx:id="mname" layoutX="40.0" layoutY="116.0" prefHeight="37.0" prefWidth="207.0">
                <font>
                   <Font name="Microsoft Tai Le Bold" size="13.0" />
                </font>
             </TextField>
-            <Label layoutX="184.0" layoutY="129.0" text="Other Name" textFill="WHITE">
+            <Label layoutX="104.0" layoutY="96.0" text="Other Name" textFill="WHITE">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Label>
-            <ComboBox fx:id="gender" layoutX="252.0" layoutY="216.0" prefHeight="27.0" prefWidth="111.0" visibleRowCount="2" />
-            <Label layoutX="285.0" layoutY="197.0" text="Gender" textFill="WHITE">
+            <ComboBox fx:id="gender" layoutX="172.0" layoutY="183.0" prefHeight="27.0" prefWidth="111.0" visibleRowCount="2" />
+            <Label layoutX="205.0" layoutY="164.0" text="Gender" textFill="WHITE">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="519.0" layoutY="199.0" text="Date of Birth" textFill="WHITE" />
-            <DatePicker fx:id="dob" layoutX="508.0" layoutY="216.0" prefHeight="27.0" prefWidth="89.0" />
-            <TextArea fx:id="addr" layoutX="118.0" layoutY="279.0" prefHeight="37.0" prefWidth="207.0">
+            <Label layoutX="439.0" layoutY="166.0" text="Date of Birth" textFill="WHITE" />
+            <DatePicker fx:id="dob" layoutX="428.0" layoutY="183.0" prefHeight="27.0" prefWidth="89.0" />
+            <TextArea fx:id="addr" layoutX="38.0" layoutY="246.0" prefHeight="37.0" prefWidth="207.0">
                <font>
                   <Font name="Microsoft Tai Le Bold" size="13.0" />
                </font>
             </TextArea>
-            <Label layoutX="198.0" layoutY="261.0" prefHeight="21.0" prefWidth="68.0" text="Address" textFill="WHITE">
+            <Label layoutX="118.0" layoutY="228.0" prefHeight="21.0" prefWidth="68.0" text="Address" textFill="WHITE">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="457.0" layoutY="129.0" prefHeight="17.0" prefWidth="71.0" text="Mobile No" textFill="WHITE">
+            <Label layoutX="377.0" layoutY="96.0" prefHeight="17.0" prefWidth="71.0" text="Mobile No" textFill="WHITE">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Label>
-            <TextField fx:id="phoneNo" layoutX="392.0" layoutY="150.0" prefHeight="37.0" prefWidth="207.0">
+            <TextField fx:id="phoneNo" layoutX="312.0" layoutY="117.0" prefHeight="37.0" prefWidth="207.0">
                <font>
                   <Font name="Microsoft Tai Le Bold" size="13.0" />
                </font>
             </TextField>
-            <Label layoutX="458.0" layoutY="261.0" prefHeight="17.0" prefWidth="71.0" text="Email" textFill="WHITE">
+            <Label layoutX="378.0" layoutY="228.0" prefHeight="17.0" prefWidth="71.0" text="Email" textFill="WHITE">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Label>
-            <TextField fx:id="email" layoutX="386.0" layoutY="279.0" prefHeight="45.0" prefWidth="214.0">
+            <TextField fx:id="email" layoutX="306.0" layoutY="246.0" prefHeight="45.0" prefWidth="214.0">
                <font>
                   <Font name="Microsoft Tai Le Bold" size="13.0" />
                </font>
             </TextField>
-            <Label layoutX="169.0" layoutY="197.0" prefHeight="17.0" prefWidth="71.0" text="Position" textFill="WHITE">
+            <Label layoutX="89.0" layoutY="164.0" prefHeight="17.0" prefWidth="71.0" text="Position" textFill="WHITE">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Label>
-            <ComboBox fx:id="pos" layoutX="119.0" layoutY="216.0" prefHeight="27.0" prefWidth="127.0" />
-            <Label layoutX="390.0" layoutY="197.0" text="Date Employed" textFill="WHITE">
+            <ComboBox fx:id="pos" layoutX="39.0" layoutY="183.0" prefHeight="27.0" prefWidth="127.0" />
+            <Label layoutX="310.0" layoutY="164.0" text="Date Employed" textFill="WHITE">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Label>
-            <DatePicker fx:id="doe" layoutX="389.0" layoutY="216.0" prefHeight="27.0" prefWidth="89.0" />
-            <Button fx:id="registerBtn" layoutX="237.0" layoutY="494.0" mnemonicParsing="false" onAction="#registerAttendant" prefHeight="38.0" prefWidth="103.0" text="Register">
+            <DatePicker fx:id="doe" layoutX="309.0" layoutY="183.0" prefHeight="27.0" prefWidth="89.0" />
+            <Button fx:id="registerBtn" layoutX="157.0" layoutY="461.0" mnemonicParsing="false" onAction="#registerAttendant" prefHeight="38.0" prefWidth="103.0" text="Register">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="cancelBtn" layoutX="358.0" layoutY="494.0" mnemonicParsing="false" onAction="#cancelRegistration" prefHeight="38.0" prefWidth="100.0" text="Cancel">
+            <Button fx:id="cancelBtn" layoutX="278.0" layoutY="461.0" mnemonicParsing="false" onAction="#cancelRegistration" prefHeight="38.0" prefWidth="100.0" text="Cancel">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Button>
-            <TextField fx:id="uName" layoutX="118.0" layoutY="359.0" prefHeight="37.0" prefWidth="207.0">
+            <TextField fx:id="uName" layoutX="38.0" layoutY="326.0" prefHeight="37.0" prefWidth="207.0">
                <font>
                   <Font name="Microsoft Tai Le Bold" size="13.0" />
                </font>
             </TextField>
-            <TextField fx:id="password" layoutX="394.0" layoutY="354.0" prefHeight="37.0" prefWidth="207.0">
+            <TextField fx:id="password" layoutX="314.0" layoutY="321.0" prefHeight="37.0" prefWidth="207.0">
                <font>
                   <Font name="Microsoft Tai Le Bold" size="13.0" />
                </font>
             </TextField>
-            <Label layoutX="185.0" layoutY="337.0" text="User Name" textFill="WHITE">
+            <Label layoutX="105.0" layoutY="304.0" text="User Name" textFill="WHITE">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="468.0" layoutY="335.0" text="Password" textFill="WHITE">
+            <Label layoutX="388.0" layoutY="302.0" text="Password" textFill="WHITE">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Label>
-            <TextField fx:id="Repeat_password" layoutX="393.0" layoutY="410.0" prefHeight="37.0" prefWidth="207.0">
+            <TextField fx:id="Repeat_password" layoutX="313.0" layoutY="377.0" prefHeight="37.0" prefWidth="207.0">
                <font>
                   <Font name="Microsoft Tai Le Bold" size="13.0" />
                </font>
             </TextField>
-            <Label layoutX="434.0" layoutY="391.0" text="Re-peat Password" textFill="WHITE">
+            <Label layoutX="354.0" layoutY="358.0" text="Re-peat Password" textFill="WHITE">
                <font>
                   <Font name="Lucida Sans Unicode" size="12.0" />
                </font>
             </Label>
+            <ImageView fx:id="attendant_image" fitHeight="127.0" fitWidth="120.0" layoutX="559.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../Assets/images/user-login-icon-14.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="btn_upload" layoutX="560.0" layoutY="128.0" mnemonicParsing="false" onAction="#insertImage" prefHeight="27.0" prefWidth="120.0" style="-fx-background-color: #020529; -fx-border-color: gray;" text="upload photo" textFill="#ebe1e1">
+               <font>
+                  <Font name="Lucida Sans Demibold" size="11.0" />
+               </font>
+            </Button>
+            <TextField fx:id="image_uri" layoutX="553.0" layoutY="173.0" opacity="0.0" prefHeight="25.0" prefWidth="127.0" />
          </children>
       </AnchorPane>
    </children>
